[gd_scene load_steps=4 format=3 uid="uid://d0rm74cf7vkyk"]

[ext_resource type="Texture2D" uid="uid://6fi1fruu0f0e" path="res://textures/UI/menu_ui_test_300.png" id="1_3na3v"]
[ext_resource type="Script" path="res://Global/mainMenu.gd" id="1_yocc6"]
[ext_resource type="LabelSettings" uid="uid://m48ou1arcktr" path="res://Global/ui_heading.tres" id="2_8ci6e"]

[node name="MainMenu" type="Control"]
process_mode = 3
z_index = 50
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yocc6")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -250.0
offset_right = 175.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3na3v")
region_rect = Rect2(21, 21, 150, 150)
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
label_settings = ExtResource("2_8ci6e")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Monsters" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Monsters"

[node name="Inventory" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Inventory"

[node name="Player" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Player"

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Save" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Save"

[node name="Load" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Load"

[node name="Quit" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit game"

[node name="Popup" type="NinePatchRect" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -100.0
offset_right = 175.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3na3v")
region_rect = Rect2(21, 21, 150, 150)
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="MarginContainer" type="MarginContainer" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
label_settings = ExtResource("2_8ci6e")
horizontal_alignment = 1

[node name="Description" type="Label" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "This will overwrite the current save.
Do you want to proceed?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 25
alignment = 1

[node name="Yes" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="No" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="Shadow" type="ColorRect" parent="Popup"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -401.0
offset_top = -224.0
offset_right = 401.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.140447, 0.140447, 0.140447, 0.545098)

[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/Monsters" to="." method="_on_monsters_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer2/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_confirm_yes_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_confirm_no_pressed"]
